Adicion CRUDS musica y recordatorios
